--- a/public/index.html
+++ b/public/index.html
@@ -22,8 +22,18 @@
 
         <!-- Inserisci il CSS qui -->
         <style>
-          .iub__us-widget {
-            display: none;
+          .cky-btn-revisit-wrapper {
+            display: none; /* Nasconde il pulsante originale */
+          }
+          .my-custom-button {
+            background-color: #0056a7;
+            color: white;
+            padding: 10px 20px;
+            border: none;
+            cursor: pointer;
+            position: fixed;
+            bottom: 20px;
+            left: 20px;
           }
         </style>
 
