--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
             
             /* Mostra il pulsante in tutti gli altri casi */
             .cky-btn-revisit-wrapper.cky-revisit-bottom-left {
-                display: block; /* o inline-block a seconda del display che preferisci */
+                display: none; /* o inline-block a seconda del display che preferisci */
             }
         </style>
         
