--- a/public/index.html
+++ b/public/index.html
@@ -42,11 +42,14 @@
 
           <!-- Inserisci il CSS qui -->
           <style>
-
+            /* Nascondi il pulsante solo quando ha la classe .cky-revisit-hide */
+            .cky-btn-revisit-wrapper.cky-revisit-bottom-left.cky-revisit-hide {
+              display: block; /* o inline-block a seconda del display che preferisci */
+            }
             
             /* Mostra il pulsante in tutti gli altri casi */
             .cky-btn-revisit-wrapper.cky-revisit-bottom-left {
-                display: none; /* o inline-block a seconda del display che preferisci */
+                display: hide; /* o inline-block a seconda del display che preferisci */
             }
         </style>
         
