--- a/public/index.html
+++ b/public/index.html
@@ -41,6 +41,13 @@
    
 
           <!-- Inserisci il CSS qui -->
+          <style>
+
+            /* Mostra il pulsante in tutti gli altri casi */
+            .cky-btn-revisit-wrapper.cky-revisit-bottom-left {
+                display:hide;
+            }
+        </style>
 
     <div id="root"></div>
 
