--- a/public/index.html
+++ b/public/index.html
@@ -45,7 +45,7 @@
 
             /* Mostra il pulsante in tutti gli altri casi */
             .cky-btn-revisit-wrapper.cky-revisit-bottom-left {
-                display:hide;
+                display:none;
             }
         </style>
 
