--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
   <head>
 
+    <!-- Start cookieyes banner --> <script id="cookieyes" type="text/javascript" src="https://cdn-cookieyes.com/client_data/1d0726ede9a648749f6d53cd/script.js"></script> <!-- End cookieyes banner -->
+
     
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
@@ -38,6 +40,15 @@
   <body>
     
     <noscript>You need to enable JavaScript to run this app.</noscript>
+
+              <!-- Inserisci il CSS qui -->
+              <style>
+
+                /* Mostra il pulsante in tutti gli altri casi */
+                .cky-btn-revisit-wrapper.cky-revisit-bottom-left {
+                    display:none;
+                }
+            </style>
    
 
 
